--- a/course-online.html
+++ b/course-online.html
@@ -69,7 +69,7 @@
 
                     <section class="header_table">
                         <div class="introduction">
-                            <img src="/static/image/Michelangelo_-_Creation_of_Adam.jpg" alt="" width="100%" >
+                            <img src="/static/image/images.jpg" alt="" width="100%" >
                         </div>
                         <span class="online__header__title">Khoá Online.</span>
                         <span class="online__header__body">Học mọi lúc, mọi nơi.</span>
