--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./static/style-users.css">
+    <link rel="stylesheet" href="./static/css/style-users.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
@@ -141,7 +141,7 @@
                         </div>
                         <div class="login__register">
                             <span class="register__text">Bạn đã có tài khoản?</span>
-                            <a class="login__register__link" href="/register">Đăng nhập ngay</a>
+                            <a class="login__register__link" href="/login.html">Đăng nhập ngay</a>
                         </div>
                     </div>
                 </div>
